--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     <link href="assets/css/style.css" rel="stylesheet" />
 
     <!-- Favicon  -->
-    <link rel="icon" href="assets/images/favicon.png" />
+    <link rel="icon" href="favicon.ico"/>
   </head>
   <body>
     <app-root></app-root>
