--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,8 @@
   </head>
   <body>
     <app-root></app-root>
+    <script>
+      var global = global || window;
+    </script>
   </body>
 </html>
