meta tag updated

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
     <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Shift - APIs to make NFTs faster and cheaper for your products"
+      content="APIs and SDKs to access managed services for frictionless NFT Dapps development."
     />
-    <meta name="author" content="Rhymetech" />
+    <meta name="author" content="Shyft" />
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-    <meta property="og:site_name" content="" />
+    <meta property="og:site_name" content="Shyft" />
     <!-- website name -->
     <meta property="og:site" content="" />
     <!-- website link -->
@@ -24,6 +24,10 @@
     <meta property="og:url" content="" />
     <!-- where do you want your post to link to -->
     <meta property="og:type" content="article" />
+    <meta
+      name="keywords"
+      content="NFTs, make nft on solana, game nft, nft storefront, nft makretplace, solana, etherium"
+    />
     <title>SHYFT</title>
     <base href="/" />
 
@@ -48,7 +52,7 @@
     <link href="assets/css/style.css" rel="stylesheet" />
 
     <!-- Favicon  -->
-    <link rel="icon" href="favicon.ico"/>
+    <link rel="icon" href="favicon.ico" />
   </head>
   <body>
     <app-root></app-root>
