calendly popup added at landing page

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,8 @@
 
     <!-- Favicon  -->
     <link rel="icon" href="favicon.ico" />
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script async src="assets/js/calendly.js"></script>
   </head>
   <body>
     <app-root></app-root>
